# plex-metadata

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  pyproject.toml
src/: domain.py  schemas.py
src/libraries/: __init__.py  cli.py  domain.py  schemas.py
src/libraries/repositories/: __init__.py  plex_libraries.py  schemas.py
src/libraries/repositories/tests/: test_libraries_repository.py
src/libraries/tests/: test_libraries_cli.py
src/plex_metadata/: cli.py
src/posters/: __init__.py  cli.py  domain.py  schemas.py
src/posters/repositories/: __init__.py  plex_posters.py  schemas.py
src/posters/repositories/tests/: test_posters_repository.py
src/posters/tests/: test_posters_cli.py  test_posters_repository.py
src/tests/: cli_mixin.py
